--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,19 @@
 FROM ponylang/ponyc
 
-RUN apt install zsh -y
+ARG DEBIAN_FRONTEND=noninteractive
+
+RUN \
+  apt-get update -y && \
+  apt-get install -y apt-utils 2>&1 | grep -v "debconf: delaying package configuration, since apt-utils is not installed" && \
+  apt-get install -y --no-install-recommends zsh -y
 
 ENV SHELL /bin/zsh
 
 RUN sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 
-RUN apt-get install ctags
+RUN apt-get install -y --no-install-recommends ctags
+
+RUN apt-get install -y --no-install-recommends libpcre2-dev
 
 # ENV TZ=Europe/Berlin
 # RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
