--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,18 +2,25 @@ FROM ponylang/ponyc
 
 ARG DEBIAN_FRONTEND=noninteractive
 
+# zsh
+
 RUN \
   apt-get update -y && \
-  apt-get install -y apt-utils 2>&1 | grep -v "debconf: delaying package configuration, since apt-utils is not installed" && \
-  apt-get install -y --no-install-recommends zsh -y
+  apt-get install -y zsh
 
 ENV SHELL /bin/zsh
 
 RUN sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 
-RUN apt-get install -y --no-install-recommends ctags
+# ctags
 
-RUN apt-get install -y --no-install-recommends libpcre2-dev
+RUN apt-get install -y ctags
+
+# dependency for github.com/ponylang/regex.git
+
+RUN \
+  apt-get install -y apt-utils 2>&1 | grep -v "debconf: delaying package configuration, since apt-utils is not installed" && \
+  apt-get install -y --no-install-recommends libpcre2-dev
 
 # ENV TZ=Europe/Berlin
 # RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
